# clion_test_polygonbackshape

./: .gitignore  CMakeLists.txt  README.md  getMapData.cpp  getMapData.h  main.cpp  path_baseplan.cpp  path_baseplan.h  path_rectangleplan.h
Decision/: curveDecision.cpp  curveDecision.h  curveDecisionType.h
Emplanner/: curve_static_obstacles_manager.cpp  curve_static_obstacles_manager.h  customPJPO.cpp  customPJPO.h  frenet_converter.cpp  frenet_converter.h  piecewise_jerk_algorithm.cpp  piecewise_jerk_algorithm.h  piecewise_jerk_path_algorithm.cpp  piecewise_jerk_path_algorithm.h
Geometry/: DP_algorithm.cpp  bspline.cpp  computeOriginalPointsToOriginalMap.cpp  computeOriginalPointsToOriginalMap.h  cornerTuring_C_CPA_Algorithm.cpp  cornerTuring_C_CPA_Algorithm.h  cornerTuring_FT_CPA_CC_Algorithm.cpp  cornerTuring_FT_CPA_CC_Algorithm.h  cornerTuring_FT_CPA_CV_ABptLocation.cpp  cornerTuring_FT_CPA_CV_ABptLocation.h  cornerTuring_FT_CPA_CV_Algorithm.cpp  cornerTuring_FT_CPA_CV_Algorithm.h  cornerTuring_FT_CPA_FS_Algorithm.cpp  cornerTuring_FT_CPA_FS_Algorithm.h  cornerTuring_Implement_Radius.cpp  cornerTuring_Implement_Radius.h  cornerTuring_TishNail_Algorithm.cpp  cornerTuring_TishNail_Algorithm.h  cornerTuring_location.cpp  cornerTuring_location.h  geometric_algorithm.cpp  geometric_algorithm.h  innerRect.h  maxRectangle_opencv.cpp  maxRectangle_opencv.h  newCornerTuring_location.cpp  newCornerTuring_location.h  reeds_shepp.cpp  reeds_shepp.h  rotator.cpp  rotator.h
HMI/: main2.cpp
HMI/imInterface/: drawOffLinePlan.cpp  drawOffLinePlan.h
HMI/implot/: implot.h  implot_internal.h
HybridAStar/: dubin_path.cpp  dubin_path.h  grid_search.cpp  grid_search.h  hybridA_param.h  hybrid_AStar_Algorithm.cpp  hybrid_AStar_Algorithm.h  hybrid_AStar_test.h  node_HybridA.cpp  node_HybridA.h
Planning/: curveDecisionManager.cpp  curveDecisionManager.h  diffMode_Choose.h  normalMatrix_Translate.cpp  normalMatrix_Translate.h  path_baseplan.cpp  path_baseplan.h  path_common.h  path_polygonplan.cpp  path_polygonplan.h  path_rectangleplan.cpp  rotationMatrix_translate.cpp  rotationMatrix_translate.h  transCoordinate.cpp  transCoordinate.h
PreProcess/: getMapData.cpp  getMapData.h
common/: common_parameters.h  object.hpp  plotter.h  singleton.hpp
common/common_param/: common_parameters.h  common_typedef.h
common/math/: aabox2d.cpp  aabox2d.h  algebra.cpp  algebra.h  box2d.cpp  box2d.h  common_math.h  line_segment_2d.cpp  line_segment_2d.h  linear_interpolation.cpp  linear_interpolation.h  math_utils.cpp  math_utils.h  polygon_2d.cpp  polygon_2d.h  vec_2d.cpp  vec_2d.h
common/plot/: computePathProfile.cpp  computePathProfile.h  curveCurvatureCalculate.cpp  curveCurvatureCalculate.h  debugHybridAStarShow.h  plotter.h  tractorPolygonShow.cpp  tractorPolygonShow.h  trailerCenterPtCalculate.cpp  trailerCenterPtCalculate.h
common/print/: boxPrint.h  filePrint.h  filePrint2.h  normaPrint.h  print.h  tractorPJPOPathPrint.h  tractorPolyPrint.h  tractorPolyPrint2.h  tractorPolyPrintCurve.h  tractorPolyReferencePath.h  trailerBoxPrint.h  trailerPt.h
common/utilpath/: discrete_match_helper.h  discretizedPath.cpp  discretizedPath.h  path_anchorPoint.h  path_common.cpp  path_common.h  path_dubins.h  path_interface.cpp  path_interface.h  path_point.h  path_polygonPoint.h  path_slPoint.h  point.cpp  point.h  pt_slboundary.h
smooth/customFemAlgorithm/: fem_pos_deviation_osqp_interface.cc  fem_pos_deviation_osqp_interface.h  fem_pos_deviation_param.h  fem_pos_deviation_smoother.cc  fem_pos_deviation_smoother.h  fem_pos_deviation_sqp_osqp_interface.cc  fem_pos_deviation_sqp_osqp_interface.h  fem_pos_smooth_manager.cpp  fem_pos_smooth_manager.h  fem_pos_smoother.h
smooth/customFemIpoptAlgorithm/: fem_pos_deviation_ipopt_interface.cpp  fem_pos_deviation_ipopt_interface.h  fem_pos_deviation_ipopt_manager.cpp  fem_pos_deviation_ipopt_manager.h  fem_pos_deviation_ipopt_param.h
smooth/customobsFemAlgorithm/: fem_obstacle_smooth_algorithm.cpp  fem_obstacle_smooth_algorithm.h  fem_obstacle_smooth_manager.cpp  fem_obstacle_smooth_manager.h  fem_obstacle_smooth_param.h
tools/: 3Dshow.py  FT-CPA-CV-show.py  FT-CPA-FS_show.py  dymg.py  dynamicNew.py  dynamicRectangle.py  dynamicShow1.py  dynamicShowTrajecty.py  manyDimensionDataShow.py  manyDimensionDataShow1.py  manyDimensionDataShow2.py  new.py  oneDimensionDataShow.py  pathAllCover.py  pathAllCover2.py  pathCCPA.py  pathKeyPointsShow.py  pathLineSegmentShow.py  pathShow.py  poly_reasearch.py  show_static_path.py  staticTractorHeadTailShow.py  test1.txt  test1111.txt  testBoostPolygonShow.py  testInsectPolygon1127.txt  testKeyptsAndPath1109.py  testObstacleOrginLine.txt  testOriginPolyBoost.txt  testPJPO1122.py  testVirtualLIne.txt  testfemIpopt.py  testline.py  testnode.py  testosqp.py  testsl.py  testsl2.py  testsl3.py  testsl5.py  tsetsl4.py  (+1 more)
tools/Experment/: ExpermentEqualDiffData.py  ExpermentEqualDiffData2.py
